# ai-voice-chat-realtime

./: README.md  main.py  pyproject.toml  synthesis.py
